# forward-deployed-ai-lab

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .replit  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  replit.nix  requirements-architect.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  security.yml
artifacts/: evaluation-report.json  red-team-report.json
data/: knowledge_base.json  salesforce_cases.json
data/eval/: golden_set.json
data/red_team/: prompts.json
docs/: PORTFOLIO_STRATEGY.md  RELEASE_PLAN.md  agentforce-integration-plan.md  architecture.md  case-study-salesforce.md  case-study-vtg.md  deep-research-2026.md  deep-research-roadmap.md  demo-script.md  evaluation-strategy.md  evidence-index.md  framework-comparison-scorecard.md  framework-strategy.md  github-portfolio-strategy.md  profile-readme-draft.md  publishing.md  recruiter-guide.md  repository-settings-checklist.md  research-basis.md  resume-claim-guardrails.md  role-evidence-matrix.md  system-card.md  technology-matrix.md  threat-model.md  validation-report.md
docs/adr/: 0001-framework-neutral-core.md  0002-human-approval-before-writes.md  0003-synthetic-public-data.md  0004-deterministic-release-gate.md  README.md
infra/cloud/: README.md
infra/kubernetes/: configmap.yaml  deployment.yaml  service.yaml
notebooks/: 01_evaluation_walkthrough.ipynb
scripts/: evaluate.py  export_standalone.sh  installed_package_smoke.py  red_team.py  smoke_test.py  verify_optional_stack.py  verify_repository.py
src/forward_deployed_ai_lab/: __init__.py  __main__.py  app.py  config.py  container.py
src/forward_deployed_ai_lab/agents/: __init__.py  langgraph_adapter.py  langgraph_app.py  orchestrator.py  registry.py  state.py
src/forward_deployed_ai_lab/api/: __init__.py  routes.py  schemas.py
src/forward_deployed_ai_lab/evaluation/: __init__.py  benchmark.py  evidence.py  metrics.py  mlflow_adapter.py  red_team.py
src/forward_deployed_ai_lab/integrations/: __init__.py  catalog.py
src/forward_deployed_ai_lab/models/: __init__.py  base.py  deterministic.py  domain.py  providers.py
src/forward_deployed_ai_lab/observability/: __init__.py  audit.py  tracing.py
src/forward_deployed_ai_lab/pipelines/: __init__.py  spark_ingestion.py
src/forward_deployed_ai_lab/prompts/: __init__.py  system.py
src/forward_deployed_ai_lab/tools/: __init__.py  approvals.py  knowledge.py  policy.py  salesforce.py  vector.py
src/forward_deployed_ai_lab/utils/: ids.py  text.py
tests/: conftest.py  test_api.py  test_audit.py  test_evaluation.py  test_evidence.py  test_orchestrator.py  test_policy.py  test_providers.py  test_retrieval.py  test_salesforce.py
web/: app.js  index.html  styles.css
