[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forward-deployed-ai-lab"
version = "0.4.0"
description = "Auditable enterprise agent workflow with RAG, human approval, Salesforce integration, evaluation, and MLOps extension points."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Justin Silas" }]
keywords = [
  "agentic-ai",
  "rag",
  "salesforce",
  "forward-deployed-engineering",
  "llm-evaluation",
  "responsible-ai",
  "mlops",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
agents = [
  "langgraph>=1.2,<2.0",
  "openai-agents>=0.18,<1.0",
  "agent-framework>=1.11,<2.0",
  "google-adk>=2.4,<3.0",
]
framework-comparison = [
  "semantic-kernel>=1.30",
  "crewai>=0.150",
  "autogen-agentchat>=0.7",
  "autogen-ext[openai]>=0.7",
]
evaluation = [
  "ragas>=0.4,<1.0",
  "deepeval>=3.0",
  "mlflow>=3.14,<4.0",
  "fairlearn>=0.12",
  "shap>=0.48",
  "evidently>=0.7",
  "garak>=0.12",
]
ml = [
  "torch>=2.5",
  "tensorflow>=2.18",
  "transformers>=4.50",
  "datasets>=3.0",
  "accelerate>=1.0",
  "scikit-learn>=1.5",
]
data = [
  "pyspark>=3.5",
  "databricks-sdk>=0.55",
  "delta-spark>=3.3",
  "pandas>=2.2",
]
vector = [
  "chromadb>=1.0",
  "qdrant-client>=1.14",
  "faiss-cpu>=1.9",
  "sentence-transformers>=4.0",
]
cloud = [
  "azure-ai-ml>=1.24",
  "azure-ai-inference>=1.0.0b9",
  "azure-search-documents>=11.6",
  "azure-identity>=1.20",
  "boto3>=1.37",
  "sagemaker>=2.240",
  "google-cloud-aiplatform>=1.85",
]
observability = [
  "opentelemetry-api>=1.31",
  "opentelemetry-sdk>=1.31",
  "opentelemetry-exporter-otlp>=1.31",
  "prometheus-client>=0.21",
]
salesforce = ["simple-salesforce>=1.12", "agentforce-sdk>=0.2,<1.0"]
notebooks = ["jupyterlab>=4.3", "ipykernel>=6.29", "matplotlib>=3.10", "pandas>=2.2"]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
  "mypy>=1.15",
  "pip-audit>=2.8",
  "build>=1.2",
]

[project.scripts]
fdai-lab = "forward_deployed_ai_lab.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "venv", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["B008", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["forward_deployed_ai_lab"]
branch = true
omit = [
  "*/__main__.py",
  "*/agents/langgraph_adapter.py",
  "*/agents/langgraph_app.py",
  "*/evaluation/mlflow_adapter.py",
  "*/pipelines/spark_ingestion.py",
  "*/tools/vector.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
